--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&family=Open+Sans:wght@400;600&display=swap");
+
 @import "reset.css";
 @import "variables.css";
 
 /* components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+
 /* screens */
 @import "screens/login.css";
 
