--- a/CSS/components/user-component.css
+++ b/CSS/components/user-component.css
@@ -6,6 +6,7 @@
 .user-component__column:first-child {
   display: flex;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .user-component__avatar {
@@ -46,6 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-bottom: 15px;
 }
 
 .user-component__time {
