--- a/CSS/screens/friends.css
+++ b/CSS/screens/friends.css
@@ -13,12 +13,12 @@
 }
 
 .friends-screen {
-  padding: 0px var(--horizontal-space);
+  padding: 5px var(--horizontal-space);
 }
 
 .friends-screen__channel {
-  margin-top: 25px;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 15px;
+  border-top: var(--main-boder);
   padding-top: 15px;
 }
 
