--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -23,6 +23,18 @@
   color: #2e363e;
 }
 
+@keyframes notificationanimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotatey(180deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
   background-color: tomato;
   width: 23px;
@@ -37,6 +49,7 @@
   /* 아이콘 겹치게하는법 */
   left: 18px;
   bottom: 18px;
+  animation: notificationanimation 2s ease-in-out infinite;
 }
 
 .nav__notification2 {
@@ -53,4 +66,30 @@
   /* 아이콘 겹치게하는법 */
   left: 30px;
   bottom: 30px;
+}
+
+@keyframes appearbinanimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translatey(50px);
+  opacity: 0;
+  animation: appearbinanimation 0.3s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.8s;
 }
