--- a/CSS/components/screen-header.css
+++ b/CSS/components/screen-header.css
@@ -14,3 +14,16 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+@keyframes rotatecog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotatez(360deg);
+  }
+}
+
+.screen-header__icons .fa-gear:hover {
+  animation: rotatecog 1s linear infinite;
+}
